Sping hibernate dev version

--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.objectcode.time4u</groupId>
 	<artifactId>time4u</artifactId>
@@ -20,7 +21,8 @@
 			<id>time4u-sourceforge</id>
 			<name>Sourceforge web site</name>
 			<!--
-				url>sftp://web.sourceforge.net/home/groups/t/ti/time4u/htdocs</url -->
+				url>sftp://web.sourceforge.net/home/groups/t/ti/time4u/htdocs</url
+			-->
 			<url>file:///srv/www/htdocs/time4u-site</url>
 		</site>
 	</distributionManagement>
@@ -258,7 +260,7 @@
 				<artifactId>org.eclipse.help</artifactId>
 				<version>3.5.0</version>
 			</dependency>
-			
+
 			<dependency>
 				<groupId>org.eclipse.equinox</groupId>
 				<artifactId>org.eclipse.equinox.launcher.carbon.macosx</artifactId>
@@ -378,17 +380,17 @@
 			<dependency>
 				<groupId>org.hibernate</groupId>
 				<artifactId>hibernate</artifactId>
-				<version>3.2.4.sp1</version>
+				<version>3.2.6.ga</version>
 			</dependency>
 			<dependency>
 				<groupId>org.hibernate</groupId>
 				<artifactId>hibernate-annotations</artifactId>
-				<version>3.2.1.ga</version>
+				<version>3.3.1.GA</version>
 			</dependency>
 			<dependency>
 				<groupId>org.hibernate</groupId>
 				<artifactId>hibernate-commons-annotations</artifactId>
-				<version>3.0.0.ga</version>
+				<version>3.3.0.ga</version>
 			</dependency>
 			<dependency>
 				<groupId>c3p0</groupId>
@@ -596,43 +598,88 @@
 				</exclusions>
 			</dependency>
 
-<dependency>
-    <groupId>com.google.gwt</groupId>
-    <artifactId>gwt-servlet</artifactId>
-    <version>${gwt.version}</version>
-    <scope>compile</scope>
-  </dependency>
-  <dependency>
-    <groupId>com.google.gwt</groupId>
-    <artifactId>gwt-user</artifactId>
-    <version>${gwt.version}</version>
-    <scope>provided</scope>
-  </dependency>
-  <dependency>
-  	<groupId>org.springframework</groupId>
-  	<artifactId>spring-core</artifactId>
-  	<version>2.5.6.SEC01</version>
-  </dependency>
-  <dependency>
-  	<groupId>org.springframework</groupId>
-  	<artifactId>spring-web</artifactId>
-  	<version>2.5.6.SEC01</version>
-  </dependency>
-  <dependency>
-  	<groupId>org.springframework</groupId>
-  	<artifactId>spring-webmvc</artifactId>
-  	<version>2.5.6.SEC01</version>
-  </dependency>
-  <dependency>
-  	<groupId>net.sf.gwt-widget</groupId>
-  	<artifactId>gwt-widgets</artifactId>
-  	<version>0.2.0</version>
-  </dependency>
-  <dependency>
-  	<groupId>net.sf.gwt-widget</groupId>
-  	<artifactId>gwt-widgets-server</artifactId>
-  	<version>0.1.4</version>
-  </dependency>
+			<dependency>
+				<groupId>com.google.gwt</groupId>
+				<artifactId>gwt-servlet</artifactId>
+				<version>${gwt.version}</version>
+				<scope>compile</scope>
+			</dependency>
+			<dependency>
+				<groupId>com.google.gwt</groupId>
+				<artifactId>gwt-user</artifactId>
+				<version>${gwt.version}</version>
+				<scope>provided</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-core</artifactId>
+				<version>2.5.6.SEC01</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-web</artifactId>
+				<version>2.5.6.SEC01</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-orm</artifactId>
+				<version>2.5.6.SEC01</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-tx</artifactId>
+				<version>2.5.6.SEC01</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-jdbc</artifactId>
+				<version>2.5.6.SEC01</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-webmvc</artifactId>
+				<version>2.5.6.SEC01</version>
+			</dependency>
+			<dependency>
+				<groupId>net.sf.gwt-widget</groupId>
+				<artifactId>gwt-widgets</artifactId>
+				<version>0.2.0</version>
+			</dependency>
+			<dependency>
+				<groupId>net.sf.gwt-widget</groupId>
+				<artifactId>gwt-widgets-server</artifactId>
+				<version>0.1.4</version>
+			</dependency>
+			<dependency>
+				<groupId>org.slf4j</groupId>
+				<artifactId>slf4j-api</artifactId>
+				<version>1.5.10</version>
+			</dependency>
+			<dependency>
+				<groupId>org.slf4j</groupId>
+				<artifactId>slf4j-log4j12</artifactId>
+				<version>1.5.10</version>
+			</dependency>
+			<dependency>
+				<groupId>hsqldb</groupId>
+				<artifactId>hsqldb</artifactId>
+				<version>1.8.0.10</version>
+			</dependency>
+			<dependency>
+				<groupId>org.hibernate</groupId>
+				<artifactId>hibernate-entitymanager</artifactId>
+				<version>3.3.2.GA</version>
+			</dependency>
+			<dependency>
+				<groupId>concurrent</groupId>
+				<artifactId>concurrent</artifactId>
+				<version>1.3.1</version>
+			</dependency>
+			<dependency>
+				<groupId>asm</groupId>
+				<artifactId>asm</artifactId>
+				<version>1.5.3</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 	<reporting>
