--- a/server/entities/.settings/org.maven.ide.eclipse.prefs
+++ b/server/entities/.settings/org.maven.ide.eclipse.prefs
@@ -1,8 +1,9 @@
-#Mon Sep 15 15:48:50 CEST 2008
+#Wed Jan 06 15:40:53 CET 2010
 activeProfiles=
 eclipse.preferences.version=1
 fullBuildGoals=process-test-resources
 includeModules=false
 resolveWorkspaceProjects=true
 resourceFilterGoals=process-resources resources\:testResources
+skipCompilerPlugin=true
 version=1
