--- a/pom.xml
+++ b/pom.xml
@@ -685,6 +685,21 @@
 				<artifactId>mysql-connector-java</artifactId>
 				<version>5.1.10</version>
 			</dependency>
+			<dependency>
+				<groupId>org.springframework.security</groupId>
+				<artifactId>spring-security-core</artifactId>
+				<version>2.0.5.RELEASE</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework.security</groupId>
+				<artifactId>spring-security-acl</artifactId>
+				<version>2.0.5.RELEASE</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework.security</groupId>
+				<artifactId>spring-security-web</artifactId>
+				<version>2.0.5.RELEASE</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 	<reporting>
