--- a/server/web/gwt/src/main/webapp/WEB-INF/web.xml
+++ b/server/web/gwt/src/main/webapp/WEB-INF/web.xml
@@ -4,6 +4,13 @@
     "http://java.sun.com/dtd/web-app_2_3.dtd">
 
 <web-app>
+	<context-param>
+		<param-name>contextConfigLocation</param-name>
+		<param-value>
+			/WEB-INF/applicationContext.xml
+			/WEB-INF/applicationContext-security.xml
+		</param-value>
+	</context-param>
 
 	<!-- Servlets -->
 	<servlet>
