Fixed Transaction annotation

--- a/server/web/gwt/war/.gitignore
+++ b/server/web/gwt/war/.gitignore
@@ -1,2 +1,5 @@
+/LoginUI
 /MainUI
 /time4u_server_web_gwt
+/de.objectcode.time4u.server.gwt.utils.Utils
+/de.objectcode.time4u.server.web.gwt.utils.Utils
