--- a/server/web/gwt/src/main/webapp/WEB-INF/web.xml
+++ b/server/web/gwt/src/main/webapp/WEB-INF/web.xml
@@ -12,6 +12,16 @@
 		</param-value>
 	</context-param>
 
+    <filter>
+        <filter-name>springSecurityFilterChain</filter-name>
+        <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+    </filter>
+
+    <filter-mapping>
+      <filter-name>springSecurityFilterChain</filter-name>
+      <url-pattern>/*</url-pattern>
+    </filter-mapping>
+    
 	<!-- Servlets -->
 	<servlet>
 		<servlet-name>greetServlet</servlet-name>
