--- a/server/web/gwt/war/WEB-INF/web.xml
+++ b/server/web/gwt/war/WEB-INF/web.xml
@@ -12,7 +12,7 @@
 		</param-value>
 	</context-param>
 
-    <!-- filter>
+    <filter>
         <filter-name>springSecurityFilterChain</filter-name>
         <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
     </filter>
@@ -20,7 +20,7 @@
     <filter-mapping>
       <filter-name>springSecurityFilterChain</filter-name>
       <url-pattern>/*</url-pattern>
-    </filter-mapping -->
+    </filter-mapping>
 
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
