--- a/server/web/ui/.settings/org.maven.ide.eclipse.prefs
+++ b/server/web/ui/.settings/org.maven.ide.eclipse.prefs
@@ -1,8 +1,9 @@
-#Tue Sep 16 11:08:48 CEST 2008
+#Mon Jan 11 10:01:40 CET 2010
 activeProfiles=
 eclipse.preferences.version=1
 fullBuildGoals=process-test-resources
 includeModules=false
 resolveWorkspaceProjects=true
 resourceFilterGoals=process-resources resources\:testResources
+skipCompilerPlugin=true
 version=1
