--- a/server/web/gwt/war/WEB-INF/web.xml
+++ b/server/web/gwt/war/WEB-INF/web.xml
@@ -50,7 +50,7 @@
 
 	<!-- Default page to serve -->
 	<welcome-file-list>
-		<welcome-file>Time4u_server_web_gwt.html</welcome-file>
+		<welcome-file>LoginUI.html</welcome-file>
 	</welcome-file-list>
 
 </web-app>
