--- a/server/web/ui/pom.xml
+++ b/server/web/ui/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<parent>
 		<groupId>de.objectcode.time4u.server.web</groupId>
 		<artifactId>time4u-server-web</artifactId>
@@ -13,13 +14,13 @@
 		<dependency>
 			<groupId>de.objectcode.time4u.server</groupId>
 			<artifactId>time4u-server-entities</artifactId>
-			<version>${pom.version}</version>			
+			<version>${pom.version}</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>de.objectcode.time4u.server</groupId>
 			<artifactId>time4u-server-ejb</artifactId>
-			<version>${pom.version}</version>			
+			<version>${pom.version}</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
@@ -81,10 +82,15 @@
 			<artifactId>hibernate-annotations</artifactId>
 			<scope>provided</scope>
 		</dependency>
-			<dependency>
-				<groupId>org.freemarker</groupId>
-				<artifactId>freemarker</artifactId>
-				</dependency>
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-validator</artifactId>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.freemarker</groupId>
+			<artifactId>freemarker</artifactId>
+		</dependency>
 	</dependencies>
 	<properties>
 		<time4u.release>${env.SVN_REVISION}</time4u.release>
@@ -97,21 +103,21 @@
 			</resource>
 		</resources>
 		<plugins>
-      		<plugin>
-        		<groupId>org.codehaus.mojo</groupId>
-		        <artifactId>buildnumber-maven-plugin</artifactId>
-		        <executions>
-        			<execution>
-	            		<phase>validate</phase>
-	            		<goals>
-			            	<goal>create</goal>
-	            		</goals>
-          			</execution>
-        		</executions>
-        		<configuration>
-        			<revisionOnScmFailure>non-svn</revisionOnScmFailure>
-        		</configuration>
-      		</plugin>
-    	</plugins>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>buildnumber-maven-plugin</artifactId>
+				<executions>
+					<execution>
+						<phase>validate</phase>
+						<goals>
+							<goal>create</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<revisionOnScmFailure>non-svn</revisionOnScmFailure>
+				</configuration>
+			</plugin>
+		</plugins>
 	</build>
 </project>
