--- a/server/web/gwt/pom.xml
+++ b/server/web/gwt/pom.xml
@@ -154,6 +154,10 @@
 			<artifactId>jsr250-api</artifactId>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.jboss.snowdrop</groupId>
+			<artifactId>snowdrop-vfs</artifactId>
+		</dependency>
 	</dependencies>
 	<properties>
 		<time4u.release>${env.SVN_REVISION}</time4u.release>
