--- a/server/web/gwt/src/main/webapp/WEB-INF/web.xml
+++ b/server/web/gwt/src/main/webapp/WEB-INF/web.xml
@@ -12,15 +12,20 @@
 		</param-value>
 	</context-param>
 
-    <filter>
-        <filter-name>springSecurityFilterChain</filter-name>
-        <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
-    </filter>
+	<context-param>
+		<param-name>contextClass</param-name>
+		<param-value>org.jboss.spring.vfs.context.VFSXmlWebApplicationContext</param-value>
+	</context-param>
 
-    <filter-mapping>
-      <filter-name>springSecurityFilterChain</filter-name>
-      <url-pattern>/*</url-pattern>
-    </filter-mapping>
+	<filter>
+		<filter-name>springSecurityFilterChain</filter-name>
+		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+	</filter>
+
+	<filter-mapping>
+		<filter-name>springSecurityFilterChain</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
 
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
@@ -29,6 +34,12 @@
 	<servlet>
 		<servlet-name>gwt-controller</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+		<init-param>
+			<param-name>contextClass</param-name>
+			<param-value>
+				org.jboss.spring.vfs.context.VFSXmlWebApplicationContext
+		    </param-value>
+		</init-param>
 		<load-on-startup>2</load-on-startup>
 	</servlet>
 
