--- a/server/web/rest/.settings/org.maven.ide.eclipse.prefs
+++ b/server/web/rest/.settings/org.maven.ide.eclipse.prefs
@@ -1,8 +1,9 @@
-#Thu Sep 18 16:56:29 CEST 2008
+#Tue Jan 12 12:44:40 CET 2010
 activeProfiles=
 eclipse.preferences.version=1
 fullBuildGoals=process-test-resources
 includeModules=false
 resolveWorkspaceProjects=true
 resourceFilterGoals=process-resources resources\:testResources
+skipCompilerPlugin=true
 version=1
