--- a/server/web/gwt/war/.gitignore
+++ b/server/web/gwt/war/.gitignore
@@ -3,3 +3,4 @@
 /time4u_server_web_gwt
 /de.objectcode.time4u.server.gwt.utils.Utils
 /de.objectcode.time4u.server.web.gwt.utils.Utils
+/de.objectcode.time4u.server.web.gwt.report.Report
