--- a/pom.xml
+++ b/pom.xml
@@ -618,37 +618,37 @@
 			<dependency>
 				<groupId>org.springframework</groupId>
 				<artifactId>spring-core</artifactId>
-				<version>2.5.6.SEC01</version>
+				<version>3.0.0.RELEASE</version>
 			</dependency>
 			<dependency>
 				<groupId>org.springframework</groupId>
 				<artifactId>spring-web</artifactId>
-				<version>2.5.6.SEC01</version>
+				<version>3.0.0.RELEASE</version>
 			</dependency>
 			<dependency>
 				<groupId>org.springframework</groupId>
 				<artifactId>spring-orm</artifactId>
-				<version>2.5.6.SEC01</version>
+				<version>3.0.0.RELEASE</version>
 			</dependency>
 			<dependency>
 				<groupId>org.springframework</groupId>
 				<artifactId>spring-tx</artifactId>
-				<version>2.5.6.SEC01</version>
+				<version>3.0.0.RELEASE</version>
 			</dependency>
 			<dependency>
 				<groupId>org.springframework</groupId>
 				<artifactId>spring-jdbc</artifactId>
-				<version>2.5.6.SEC01</version>
+				<version>3.0.0.RELEASE</version>
 			</dependency>
 			<dependency>
 				<groupId>org.springframework</groupId>
 				<artifactId>spring-webmvc</artifactId>
-				<version>2.5.6.SEC01</version>
+				<version>3.0.0.RELEASE</version>
 			</dependency>
 			<dependency>
 				<groupId>org.springframework</groupId>
 				<artifactId>spring-aop</artifactId>
-				<version>2.5.6.SEC01</version>
+				<version>3.0.0.RELEASE</version>
 			</dependency>
 			<dependency>
 				<groupId>net.sf.gwt-widget</groupId>
@@ -693,18 +693,7 @@
 			<dependency>
 				<groupId>org.springframework.security</groupId>
 				<artifactId>spring-security-core</artifactId>
-				<version>2.0.5.RELEASE</version>
-				<exclusions>
-					<exclusion>
-						<groupId>org.springframework</groupId>
-						<artifactId>spring-aop</artifactId>
-					</exclusion>
-				</exclusions>
-			</dependency>
-			<dependency>
-				<groupId>org.springframework.security</groupId>
-				<artifactId>spring-security-core-tiger</artifactId>
-				<version>2.0.5.RELEASE</version>
+				<version>3.0.0.RELEASE</version>
 				<exclusions>
 					<exclusion>
 						<groupId>org.springframework</groupId>
@@ -715,7 +704,7 @@
 			<dependency>
 				<groupId>org.springframework.security</groupId>
 				<artifactId>spring-security-acl</artifactId>
-				<version>2.0.5.RELEASE</version>
+				<version>3.0.0.RELEASE</version>
 				<exclusions>
 					<exclusion>
 						<groupId>org.springframework</groupId>
@@ -732,6 +721,16 @@
 				<groupId>org.jboss.snowdrop</groupId>
 				<artifactId>snowdrop-vfs</artifactId>
 				<version>1.0.0.CR2</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework.security</groupId>
+				<artifactId>spring-security-config</artifactId>
+				<version>3.0.0.RELEASE</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework.security</groupId>
+				<artifactId>spring-security-web</artifactId>
+				<version>3.0.0.RELEASE</version>
 			</dependency>
 		</dependencies>		
 	</dependencyManagement>
