Moved webclient to separate (lazy) module

--- a/server/web/gwt/war/.gitignore
+++ b/server/web/gwt/war/.gitignore
@@ -4,3 +4,6 @@
 /de.objectcode.time4u.server.gwt.utils.Utils
 /de.objectcode.time4u.server.web.gwt.utils.Utils
 /de.objectcode.time4u.server.web.gwt.report.Report
+/de.objectcode.time4u.server.gwt.utils.Utils
+/de.objectcode.time4u.server.web.gwt.webclient.WebClient
+/de.objectcode.time4u.server.web.gwt.webclient.client.WebClient
