--- a/server/web/gwt/war/.gitignore
+++ b/server/web/gwt/war/.gitignore
@@ -1,9 +1,5 @@
-/LoginUI
-/MainUI
-/time4u_server_web_gwt
-/de.objectcode.time4u.server.gwt.utils.Utils
-/de.objectcode.time4u.server.web.gwt.utils.Utils
-/de.objectcode.time4u.server.web.gwt.report.Report
-/de.objectcode.time4u.server.gwt.utils.Utils
-/de.objectcode.time4u.server.web.gwt.webclient.WebClient
-/de.objectcode.time4u.server.web.gwt.webclient.client.WebClient
+/*
+!/WEB-INF
+!*.jsp
+!*.html
+!*.css
