--- a/server/web/gwt/pom.xml
+++ b/server/web/gwt/pom.xml
@@ -237,4 +237,21 @@
 			-->
 		</plugins>
 	</build>
+	<profiles>
+		<profile>
+			<id>no-compile</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.codehaus.mojo</groupId>
+						<artifactId>gwt-maven-plugin</artifactId>
+						<version>1.2-SNAPSHOT</version>
+						<configuration>
+							<skip>true</skip>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
 </project>
