--- a/server/web/gwt/pom.xml
+++ b/server/web/gwt/pom.xml
@@ -13,6 +13,12 @@
 	<dependencies>
 		<dependency>
 			<groupId>de.objectcode.time4u.server</groupId>
+			<artifactId>time4u-server-api</artifactId>
+			<version>${pom.version}</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>de.objectcode.time4u.server</groupId>
 			<artifactId>time4u-server-entities</artifactId>
 			<version>${pom.version}</version>
 			<scope>provided</scope>
@@ -21,7 +27,7 @@
 			<groupId>de.objectcode.time4u.server</groupId>
 			<artifactId>time4u-server-ejb</artifactId>
 			<version>${pom.version}</version>
-			<scope>compile</scope>
+			<scope>provided</scope>
 			<type>ejb</type>
 		</dependency>
 		<dependency>
